Update domain to sunguowen.cn

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name imxiaosun.com www.imxiaosun.com localhost;
+    server_name sunguowen.cn www.sunguowen.cn localhost;
 
     root /usr/share/nginx/html;
     index index.html;
