Change Nginx 444 to 403 for debugging and allow localhost

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,14 @@
 server {
     listen 80 default_server;
     server_name _;
-    return 444;
+    # 返回 403 Forbidden 而不是直接断开连接，方便排查是 Nginx 拒绝还是网络拦截
+    return 403; 
 }
 
 server {
     listen 80;
-    server_name sunguowen.cn www.sunguowen.cn;
+    # 暂时加回 localhost 方便在服务器本地测试
+    server_name sunguowen.cn www.sunguowen.cn localhost 127.0.0.1;
 
     root /usr/share/nginx/html;
     index index.html;
