--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - DATABASE_HOST=db
       - DATABASE_PORT=3306
       - DEBUG=False
-      - ALLOWED_HOSTS=sunguowen.cn,www.sunguowen.cn
+      - ALLOWED_HOSTS=sunguowen.cn,www.sunguowen.cn,localhost,127.0.0.1
 
   frontend:
     build: 
