--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,14 +1,12 @@
 server {
     listen 80 default_server;
     server_name _;
-    # 返回 403 Forbidden 而不是直接断开连接，方便排查是 Nginx 拒绝还是网络拦截
-    return 403; 
+    return 444;
 }
 
 server {
     listen 80;
-    # 暂时加回 localhost 方便在服务器本地测试
-    server_name sunguowen.cn www.sunguowen.cn localhost 127.0.0.1;
+    server_name sunguowen.cn www.sunguowen.cn;
 
     root /usr/share/nginx/html;
     index index.html;
